--- a/components/Jumbotron/Jumbotron.module.css
+++ b/components/Jumbotron/Jumbotron.module.css
@@ -7,12 +7,26 @@
     width: 100vw;
     color: #fff;
     font-family: "Roboto", sans-serif;
-background: -webkit-radial-gradient(50% 200%, rgba(93, 9, 121, 1) 0%,
-    rgba(93, 9, 121, 1) 35%,
-    rgba(0, 0, 0, 1) 70%);
-    background: radial-gradient(at 50% 200%, 
-        #2b214d 0%,
-        rgba(93, 9, 121, 1) 20%,
-        rgba(93, 9, 121, 1) 35%,
-        rgba(0, 0, 0, 1) 70%);
+    background: black;
+    position: relative;
+    z-index: 2;
+    overflow: hidden;
+}
+
+.content {
+    position: relative;
+    z-index: 2;
+}
+
+.gradientBackground {
+    background: rgb(93, 9, 121);
+    background: radial-gradient(circle, rgba(93, 9, 121, 1) 0%, rgba(93, 9, 121, 1) 35%, rgba(0, 0, 0, 1) 70%);
+    aspect-ratio: 1;
+    position: absolute;
+    left: 50%;
+    bottom: 0;
+    transform: translate(-50%,70%);
+    height: 150vw;
+    width: auto;
+    z-index: 1;
 }
