--- a/components/Jumbotron/Jumbotron.module.css
+++ b/components/Jumbotron/Jumbotron.module.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    height: calc(100vh - 4rem);
     width: 100vw;
     color: #fff;
     font-family: "Roboto", sans-serif;
