--- a/components/Jumbotron/Jumbotron.module.css
+++ b/components/Jumbotron/Jumbotron.module.css
@@ -31,10 +31,21 @@
     width: auto;
     z-index: 1;
     transition: all 2000ms cubic-bezier(0.42, 0, 0.26, 1.38);
+    animation: gradientBackground 4s ease-in-out infinite alternate;
 }
 
 @media screen and (max-width: 700px) {
     .gradientBackground {
         height: 200vw;
+    }
+}
+
+/*Animations for the gradient background*/
+@keyframes gradientBackground {
+    0% {
+        transform: translate(-50%, 85%);
+    }
+    100% {
+        transform: translate(-50%, 80%);
     }
 }
