--- a/components/Gallery/Gallery.module.css
+++ b/components/Gallery/Gallery.module.css
@@ -1,15 +1,15 @@
-.header{
+.header {
 	text-align: center;
 }
 
-.wrapper{
+.wrapper {
 	display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    margin: 0 auto;
-    max-width: 1200px;
-    padding: 0 20px;
+	flex-wrap: wrap;
+	justify-content: center;
+	align-items: center;
+	margin: 0 auto;
+	max-width: 1200px;
+	padding: 0 20px;
 }
 
 .gallery {
@@ -17,38 +17,43 @@
 	padding: 2px;
 	transition: 0.3s;
 }
+
 .gallery:hover .gallery__image {
 	filter: grayscale(1);
 }
+
 .gallery__column {
 	display: flex;
 	flex-direction: column;
 	width: 250%;
 }
+
 .gallery__link {
 	margin: 2px;
 	overflow: hidden;
 }
+
 .gallery__link:hover .gallery__image {
 	filter: grayscale(0);
 }
+
 .gallery__link:hover .gallery__caption {
 	opacity: 1;
 }
+
 .gallery__thumb {
 	position: relative;
 }
+
 .gallery__image {
 	display: block;
 	width: 100%;
 	transition: 0.3s;
 }
 
-/* UNDECIDED DESIGN CHOICE */
-
 .gallery__image:hover {
 	transform: scale(1.3);
-	
+
 }
 
 .gallery__caption {
@@ -61,6 +66,6 @@
 	font-size: 16px;
 	color: white;
 	opacity: 0;
-	background: linear-gradient(0deg, rgba(0, 0, 0, .5) 0%, rgba(255, 255, 255, 0) 100%);
+	/*background: linear-gradient(0deg, rgba(0, 0, 0, .5) 0%, rgba(255, 255, 255, 0) 100%);*/
 	transition: 0.3s;
 }
