--- a/components/Countdown/Countdown.module.css
+++ b/components/Countdown/Countdown.module.css
@@ -16,11 +16,9 @@
     padding: 1rem 3rem;
     border-radius: 1rem;
     opacity: 1;
+    margin: 3rem auto auto auto;
 }
 
-.wrapper.show {
-    /*animation: main-slide-in 0.5s ease-in-out both 0.5s;*/
-}
 .main span {
     display: inline-block;
     text-align: center;
