--- a/components/Jumbotron/Jumbotron.module.css
+++ b/components/Jumbotron/Jumbotron.module.css
@@ -15,9 +15,8 @@
 .content {
     position: relative;
     z-index: 2;
+    margin-top: -10rem;
 }
-
-
 
 .gradientBackground {
     animation: gradientBackground 4s ease-in-out infinite alternate;
