--- a/components/Countdown/Countdown.module.css
+++ b/components/Countdown/Countdown.module.css
@@ -1,48 +1,47 @@
 .main {
-    width: fit-content;
-    height: fit-content;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    column-gap: 4em;
-    row-gap: 2em;
+  width: fit-content;
+  height: fit-content;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  column-gap: 4em;
+  row-gap: 2em;
 }
 
 .wrapper {
-    height: fit-content;
-    width: fit-content;
-    background: rgba(0, 0, 0, 0.1);
-    padding: 1rem 3rem;
-    border-radius: 1rem;
-    opacity: 1;
-    margin: 3rem auto auto auto;
+  height: fit-content;
+  width: fit-content;
+  background: rgba(0, 0, 0, 0.1);
+  border-radius: 1rem;
+  opacity: 1;
+  margin: 3rem auto auto auto;
 }
 
 .main span {
-    display: inline-block;
-    text-align: center;
-    font-size: 4rem;
-    margin: auto;
+  display: inline-block;
+  text-align: center;
+  font-size: 4rem;
+  margin: auto;
 }
 
 .main span h1 {
-    margin: 0;
-    font-size: 1em;
+  margin: 0;
+  font-size: 1em;
 }
 .main span p {
-    margin: 0;
-    font-size: 0.35em;
+  margin: 0;
+  font-size: 0.35em;
 }
 
 @media screen and (max-width: 700px) {
-    .main span {
-        font-size: 2rem;
-    }
+  .main span {
+    font-size: 2rem;
+  }
 
-    .main {
-        column-gap: 2em;
-    }
+  .main {
+    column-gap: 2em;
+  }
 }
 
 /*
@@ -50,6 +49,12 @@
     * countdown component fades into view.
 */
 @keyframes main-slide-in {
-    0% {transform: translate(0, 50%); opacity: 0;}
-    100% {transform: translate(0, 0); opacity: 1;}
+  0% {
+    transform: translate(0, 50%);
+    opacity: 0;
+  }
+  100% {
+    transform: translate(0, 0);
+    opacity: 1;
+  }
 }
