--- a/components/Timeline/Timeline.module.css
+++ b/components/Timeline/Timeline.module.css
@@ -12,3 +12,9 @@
     display: block;
     max-width: 30vw;
 }
+
+@media screen and (max-width: 700px) {
+    .timelineBody {
+        max-width: 40vw;
+    }
+}
