--- a/components/Countdown/Countdown.module.css
+++ b/components/Countdown/Countdown.module.css
@@ -14,14 +14,16 @@
   width: fit-content;
   background: rgba(0, 0, 0, 0.1);
   border-radius: 1rem;
+  padding: 0.5rem 1rem;
+  box-sizing: border-box;
   opacity: 1;
-  margin: 3rem auto auto auto;
+  margin: 1.5rem auto auto auto;
 }
 
 .main span {
   display: inline-block;
   text-align: center;
-  font-size: 4rem;
+  font-size: 3.5rem;
   margin: auto;
 }
 
