--- a/components/Gallery/Gallery.module.css
+++ b/components/Gallery/Gallery.module.css
@@ -52,8 +52,8 @@
 }
 
 .gallery__image:hover {
-	transform: scale(1.05);
-
+	/* transform: scale(1.05); */
+	transform: scaleY(1.07);
 }
 
 .gallery__caption {
@@ -68,4 +68,26 @@
 	opacity: 0;
 	/*background: linear-gradient(0deg, rgba(0, 0, 0, .5) 0%, rgba(255, 255, 255, 0) 100%);*/
 	transition: 0.3s;
+}
+
+.image_info{
+	height: 25%;
+	font-size: 10em !important;
+}
+
+.button_wrapper{
+	width: 100px;
+	height: 50px;
+}
+/* @media (max-width: 768px) {
+	.image_info {
+		display: none;
+	}
+} */
+
+@media (max-width: 1000) {
+	.gallery__column {
+		flex-direction: row;
+		font-size: smaller;
+	}
 }
