Added progress bar

--- a/components/ScrollyTelling/ScrollyTeller.module.css
+++ b/components/ScrollyTelling/ScrollyTeller.module.css
@@ -40,3 +40,10 @@
     left: 50%;
     transform: translate(-50%);
 }
+
+.progressBar {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100vw;
+}
