--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  scrollbar-gutter: stable;
 }
 
 body {
@@ -12,6 +13,7 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+    scrollbar-gutter: stable;
 }
 
 a {
