--- a/components/Gallery/Gallery.module.css
+++ b/components/Gallery/Gallery.module.css
@@ -66,28 +66,43 @@
 	font-size: 16px;
 	color: white;
 	opacity: 0;
-	/*background: linear-gradient(0deg, rgba(0, 0, 0, .5) 0%, rgba(255, 255, 255, 0) 100%);*/
+	background: linear-gradient(0deg, rgba(0, 0, 0, .5) 0%, rgba(255, 255, 255, 0) 100%);
 	transition: 0.3s;
 }
 
+.image_info div{
+	font-size: 0.38em;
+}
+
 .image_info{
-	height: 25%;
-	font-size: 10em !important;
+	height: 30%;
 }
 
 .button_wrapper{
 	width: 100px;
 	height: 50px;
 }
-/* @media (max-width: 768px) {
-	.image_info {
-		display: none;
-	}
-} */
 
-@media (max-width: 1000) {
-	.gallery__column {
-		flex-direction: row;
-		font-size: smaller;
+
+@media (max-width: 1300px) {
+
+	.image_info{
+		height: 30% !important;
+	}
+
+	.image_info div{
+		font-size: 0.35em !important;
+		line-height: 1.2;
+	}
+}
+
+@media (max-width: 792px) {
+	.image_info{
+		height: 30% !important;
+	}
+
+
+	.image_info div{
+		font-size: 0.4em !important;
 	}
 }
