--- a/components/Gallery/Gallery.module.css
+++ b/components/Gallery/Gallery.module.css
@@ -7,9 +7,13 @@
 	flex-wrap: wrap;
 	justify-content: center;
 	align-items: center;
-	margin: 0 auto;
+	margin: 20px auto;
 	max-width: 95%;
 	padding: 0 20px;
+}
+
+.image_box{
+	margin-top: 50px;
 }
 
 .gallery {
@@ -91,8 +95,7 @@
 	}
 
 	.image_info div{
-		font-size: 0.35em !important;
-		line-height: 1.2;
+		line-height: 99%;
 	}
 }
 
