--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,7 +2,11 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  /*
+  Need a better alternative to scrollbar-gutter for preventing
+  page offset when scrollbar is visible.
   scrollbar-gutter: stable;
+  */
 }
 
 body {
