--- a/components/Jumbotron/Jumbotron.module.css
+++ b/components/Jumbotron/Jumbotron.module.css
@@ -1,12 +1,6 @@
 .main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
     height: calc(100vh - 4rem);
-    width: 100vw;
     color: #fff;
-    font-family: "Roboto", sans-serif;
     background: black;
     position: relative;
     overflow: hidden;
@@ -15,7 +9,7 @@
 .content {
     position: relative;
     z-index: 2;
-    margin-top: -10rem;
+    height: 100%;
 }
 
 .gradientBackground {
