--- a/components/Gallery/Gallery.module.css
+++ b/components/Gallery/Gallery.module.css
@@ -7,9 +7,20 @@
 	flex-wrap: wrap;
 	justify-content: center;
 	align-items: center;
-	margin: 20px auto;
+	margin: 0px auto;
 	max-width: 95%;
 	padding: 0 20px;
+}
+
+.wrapper_wrapper{
+	background-color :rgb(1, 24, 48);
+	margin-top: 0;
+}
+
+.header{
+	text-align: center;
+	margin-top: 0;
+	padding-top: 20px;
 }
 
 .image_box{
@@ -79,7 +90,7 @@
 }
 
 .image_info{
-	height: 30%;
+	height: 20%;
 }
 
 .button_wrapper{
