--- a/components/Gallery/Gallery.module.css
+++ b/components/Gallery/Gallery.module.css
@@ -40,7 +40,7 @@
 .gallery__column {
 	display: flex;
 	flex-direction: column;
-	width: 250%;
+	width: 25%;
 }
 
 .gallery__link {
@@ -68,7 +68,7 @@
 
 .gallery__image:hover {
 	/* transform: scale(1.05); */
-	transform: scaleY(1.07);
+	transform: scale(1.07);
 }
 
 .gallery__caption {
