changed header design to transparent

--- a/components/Jumbotron/Jumbotron.module.css
+++ b/components/Jumbotron/Jumbotron.module.css
@@ -1,5 +1,5 @@
 .main {
-    height: calc(100vh - 4rem);
+    height: calc(100vh);
     color: #fff;
     background: black;
     position: relative;
