Added cool waves to the front page

--- a/components/Wave/wave.module.css
+++ b/components/Wave/wave.module.css
@@ -1,77 +1,50 @@
-.root {
-  padding: 0;
-  margin: unset;
-  width: 100%;
-  max-width: none;
-}
-
-.waveWrapperInner {
-  position: absolute;
-  left: 0;
-  right: 0;
-  width: 100%;
-  overflow: hidden;
-  height: 70px;
-  bottom: 0;
-  z-index: 15;
-}
-
 .wave {
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  width: 200%;
-  height: 100%;
-  fill: #f5f5f5;
-  display: flex;
-}
-
-.waveTop {
-  z-index: 18;
-  opacity: 1;
-  animation: moveWave 60s linear alternate infinite;
-  transform-origin: bottom center;
-  position: absolute;
-  bottom: 0;
   width: 100%;
-  height: 120px;
-}
-
-.waveMiddle {
-  z-index: 17;
-  opacity: 0.6;
-  animation: moveWave 20s linear alternate infinite;
-  transform-origin: bottom left;
+  min-height: 40px;
+  height: 20vh;
   position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 120px;
+  transform: translate(0, -100%);
+  z-index: 2;
+  border: none;
 }
 
-.waveBottom {
-  z-index: 16;
-  opacity: 0.7;
-  width: 280%;
-  animation: moveWave 25s linear alternate infinite;
-  transform-origin: bottom right;
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 120px;
+.parallax > use {
+  animation: move-forever 25s cubic-bezier(.55,.5,.45,.5)     infinite;
+}
+.parallax > use:nth-child(1) {
+  animation-delay: -2s;
+  animation-duration: 15s;
+}
+.parallax > use:nth-child(2) {
+  animation-delay: -3s;
+  animation-duration: 17s;
+}
+.parallax > use:nth-child(3) {
+  animation-delay: -4s;
+  animation-duration: 20s;
+}
+.parallax > use:nth-child(4) {
+  animation-delay: -5s;
+  animation-duration: 25s;
 }
 
-.svg {
-}
-@keyframes moveWave {
+@keyframes move-forever {
   0% {
-    transform: translateX(0) translateZ(0) scaleY(1);
+   transform: translate3d(-90px,0,0);
   }
-
-  50% {
-    transform: translateX(-25%) translateZ(0) scaleY(0.55);
-  }
-
-  100% {
-    transform: translateX(-50%) translateZ(0) scaleY(1);
+  100% { 
+    transform: translate3d(85px,0,0);
   }
 }
+
+/* className='
+    w-[100%]
+    md:w-[100%]
+    min-h-[40px]
+    md:min-h-[100px]
+    max-h-[120px]
+    md:h-[10vh]
+    h-[40px]
+    origin center rotate-180
+    relative
+' */
