--- a/components/Wave/wave.module.css
+++ b/components/Wave/wave.module.css
@@ -8,6 +8,12 @@
   border: none;
 }
 
+@media screen and (max-width: 700px) {
+  .wave {
+    height: 10vh;
+  }  
+}
+
 .parallax > use {
   animation: move-forever 25s cubic-bezier(0.55, 0.5, 0.45, 0.5) infinite;
 }
