--- a/components/History/CutoutText/CutoutText.module.css
+++ b/components/History/CutoutText/CutoutText.module.css
@@ -7,7 +7,9 @@
     user-select: none;
     position: relative;
     z-index: 3;
+    transform: scale(100%);
 }
+
 
 .background {
     background: rgb(168,93,161);
@@ -16,8 +18,8 @@
     width: 100%;
     position: absolute;
     top: 0;
-    left: 0;
-    z-index: 2;
+    left: 2x;
+    z-index: -2;
     transform: translateZ(0);
 }
 
@@ -28,14 +30,17 @@
     left: 0;
     height: 100%;
     width: 100%;
-    z-index: 1;
+    z-index: -3;
 }
 
 .wrapper {
     position: relative;
     width: fit-content;
+    backface-visibility: hidden;    
     overflow: hidden;
     max-width: 80vw;
+    transform-style: preserve-3d;
+
 }
 
 @keyframes fade-in {
