--- a/components/History/CutoutBody/CutoutBody.module.css
+++ b/components/History/CutoutBody/CutoutBody.module.css
@@ -36,3 +36,9 @@
     max-width: 80vw;
     overflow: hidden;
 }
+
+@media screen and (max-width: 600px) {
+    .text {
+        font-size: 1.5rem;
+    }
+}
