--- a/components/History/CutoutBody/CutoutBody.module.css
+++ b/components/History/CutoutBody/CutoutBody.module.css
@@ -7,6 +7,8 @@
     user-select: none;
     position: relative;
     z-index: 3;
+    width: 100%;
+    white-space: break-spaces;
 }
 
 .background {
